# FreeMajor

./: .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CPackLists.txt  README.md
.github/workflows/: release.yml
cmake/: RtMidi.cmake
docs/manual/: Makefile
docs/manual/en/: Makefile  manual.html  manual.txt
docs/manual/fr/: manual.html  manual.txt
po/fr/: FreeMajor.po  gmajctl.po
resources/application/: FreeMajor.desktop  FreeMajor.icns  FreeMajor.xpm
resources/factory-patches/: 01-G-Major Verb & Slap.realpatch  02-FilterReverb.realpatch  03-Sheryls Sound.realpatch  04-Tremolo Pedal Speed.realpatch  05-So Scho.realpatch  06-Scotty's Blues.realpatch  07-Straight Lead.realpatch  08-Funky Thang.realpatch  09-Right On The Edge.realpatch  10-Bluebox Echo's.realpatch  100-To Be Continued.realpatch  11-Sparkle.realpatch  12-Pan Chorus.realpatch  13-Clean Cowboy.realpatch  14-Cowboy Slap.realpatch  15-The Good, Bad & Ugl.realpatch  16-Rockabilly Slap.realpatch  17-All That Lee.realpatch  18-A Bit OF Chet A.realpatch  19-Shadows Of H. Marvi.realpatch  20-Filtered Slap Delay.realpatch  21-Straight Slap Dly.realpatch  22-Subtle Lead Fx's.realpatch  23-Chorused Lead.realpatch  24-Chorus & Dyn Dly.realpatch  25-T Petty Chorus.realpatch  26-Jazz Ballad.realpatch  27-Wide Chorus.realpatch  28-Wes M Jazz Lead.realpatch  29-Funky Music Verb.realpatch  30-Rock'n Roll Spring.realpatch  31-Rev Amb.realpatch  32-TightVerb.realpatch  33-SpreadVerb.realpatch  34-Small Room.realpatch  35-Dly Doubler.realpatch  36-Clean,Comp,Chorus'd.realpatch  37-Comp'n Detune.realpatch  38-Blues Lead.realpatch  39-Blues Room.realpatch  (+61 more)
resources/mime/: freemajor-realmajor.xml  freemajor-realpatch.xml
scripts/: i18n.sh
sources/: app_i18n.cc  app_i18n.h  app_win32.rc  main.cc
sources/device/: midi.cc  midi.h
sources/model/: parameter.cc  parameter.h  patch.cc  patch.h  patch_loader.cc  patch_loader.h  patch_writer.cc  patch_writer.h
sources/ui/: association.cc  association.h  eq_display.cc  eq_display.h  main_component.cxx  main_component.fld  main_component.h  main_component_impl.cc  main_window.cc  main_window.h  matrix_display.cc  matrix_display.h  midi_out_queue.cc  midi_out_queue.h  modifiers_editor.cxx  modifiers_editor.fld  modifiers_editor.h  modifiers_editor_impl.cc  patch_chooser.cxx  patch_chooser.fld  patch_chooser.h  receive_dialog.cxx  receive_dialog.fld  receive_dialog.h  receive_dialog_impl.cc  singlemod_editor.cxx  singlemod_editor.fld  singlemod_editor.h  widget_ex.h
sources/utility/: misc.cc  misc.h
